# riscv-emulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  emulator.cpp  emulator.h  example.cpp  log.txt
mem/: CMakeLists.txt  README.md  mem.cpp  mem.h  memory_interface.h  regfile.cpp  regfile.h
mem/tests/: tests_read_write.cpp
modules/: CMakeLists.txt  README.md
runtime/: CMakeLists.txt  README.md  err.h  handlers_b.cpp  handlers_b.hpp  handlers_i.cpp  handlers_i.hpp  handlers_j.cpp  handlers_j.hpp  handlers_m.hpp  handlers_nop.hpp  handlers_r.cpp  handlers_r.hpp  handlers_s.cpp  handlers_s.hpp  handlers_u.cpp  handlers_u.hpp  interpreter.cpp  interpreter.h  interpreter.hpp
runtime/tests/: gen_tests.py  macros.h  tests_b.cpp  tests_j.cpp  tests_m.cpp
scripts/: README.md  format.sh  parse_dump.py
test_gen/: CMakeLists.txt  generator.cpp  generator.h  test_inst_list.h  testgen.cpp
tests/: Desktop.rar  README.md  objdumpp_return_all_options  objdumpp_return_all_options_d  objdumpp_return_startfiles  objdumpp_return_startfiles_d  tests_common.cpp
tests/cpy/: cpy.c
tests/factorial/: factorial  factorial.c  objdump  objdump_d
tests/func/: func  func.c  func_no_start  func_start  objdump  objdump_d  objdump_no_start  objdump_no_start_d  objdump_start  objdump_start_d
tests/if/: if  if.c  objdump  objdump_d
tests/infinite_loop/: il  il.c  objdump  objdump_d
tests/memcpy/: mem_no_start  mem_pi  mem_pi_start  mem_start_linux  memcpy  memcpy.c  objdump  objdump_d  objdump_pi  objdump_pi_start  objdump_pi_start_full
tests/memcpy/mem1/: mem1  mem1.c  mem1_std  obj_mem1  obj_mem1_std
tests/memcpy/mem2/: mem2  mem2.c  obj_mem2
tests/memcpy/mem3/: mem3  mem3.c  obj_mem3
tests/queens_problem/: objdump  objdump_2_d  objdump_d  queens.c  queens2  queens8
tests/queens_problem/linux/: obj_linux_no_start  queens8_linux  queens8_linux_no_start
tests/return/: return
tests/sum/: cpy.c  objdump  objdump_d  sum
utils/: CMakeLists.txt  README.md  elfreader.h  ins.cpp  ins.h  isa.h  macros.h  readelf.cpp  readelf.h  register.h
utils/tests/: tests_instructions_B.cpp  tests_instructions_I.cpp  tests_instructions_J.cpp  tests_instructions_M.cpp  tests_instructions_R.cpp  tests_instructions_S.cpp  tests_instructions_U.cpp  tests_utils.cpp
